Added config to generate original WiiU xml

--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 ; Custom config example for my kids
+; Many non-essential properties have been omitted to create a smaller file
 ; Contains a bunch of game tips lifted from wiki pages, and some fun paintings
 
 [topic.0]
